# multisig-squad

./: Anchor.toml  Cargo.toml  README.md
src/: lib.rs  main.rs
