[package]
name = "multisig-squad"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.29"
solana-program = "1.17"
solana-client = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.1"

[features]
default = []
